--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.5.1",
-    "@storybook/blocks": "^7.5.1",
-    "@storybook/html": "^7.5.1",
-    "@storybook/html-vite": "^7.5.1",
+    "@storybook/addon-essentials": "^7.5.2",
+    "@storybook/addon-interactions": "^7.5.2",
+    "@storybook/addon-links": "^7.5.2",
+    "@storybook/addon-mdx-gfm": "^7.5.2",
+    "@storybook/blocks": "^7.5.2",
+    "@storybook/html": "^7.5.2",
+    "@storybook/html-vite": "^7.5.2",
     "@storybook/testing-library": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.5.1",
+    "storybook": "^7.5.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
